--- a/templates/item_remove.html
+++ b/templates/item_remove.html
@@ -30,7 +30,7 @@
                                     <span class="badge text-bg-secondary">₹{{item[1]}}</span>
                                 </td>
                                 <td class="item-action text-center" colspan="2">
-                                    <button class="btn btn-sm btn-danger btn-remove-menu-item"  data-name="{{item[0]}}" data-category="{{i|lower}}"><i class="bi bi-trash"></i></button>
+                                    <button class="btn btn-sm btn-danger btn-remove-menu-item"  data-name="{{item[0]}}" data-category="{{i|lower}}" data-image="{{item[3]}}"><i class="bi bi-trash"></i></button>
                                 </td>
                             </tr>
                             {% endfor %}
