feat: menu of the day page added

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,7 +20,7 @@
                 <div class="card-body px-4">
                     <div class="text-center">
                         <h5 class="fw-normal">
-                            <i class="bi {% if i == 'Add Item' %} bi-plus-circle {% elif i == 'Remove Item' %} bi-dash-circle {% elif i == 'Update Item' %} bi-arrow-repeat {% elif i == 'Show Orders' %} bi-border-width {% elif i == 'Menu of the day' %}bi-list-stars{% endif %}"></i>
+                            <i class="bi {% if i == 'Add Item' %} bi-plus-circle {% elif i == 'Remove Item' %} bi-dash-circle {% elif i == 'Update Item' %} bi-arrow-repeat {% elif i == 'Show Orders' %} bi-list-task {% elif i == 'Menu of the day' %}bi-menu-button-wide{% endif %}"></i>
                             {{i}}
                         </h5>
                     </div>
