--- a/templates/item_remove.html
+++ b/templates/item_remove.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} {% block body %}
 <div class="container my-5 p-3">
-    <div>
+    <div class="p-3">
         <h3 class="fw-normal fs-4"><i class="bi bi-trash me-2"></i>Remove Item</h3>
         <hr>
         <p class="mb-4 fw-light">Remove items from the menu with specific categories.</p>
     </div>
-    <div class="menu-list">
+    <div class="menu-list p-3">
         {% for ct in ['Breakfast', 'Lunch', 'Snacks', 'Dinner'] %}
         <h3 class="fw-normal fs-4">{{ct}}</h3>
         <hr class="mb-3">
