--- a/templates/motd.html
+++ b/templates/motd.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} {% block body %}
 <div class="container my-5 p-3">
-    <div>
+    <div class="p-3">
         <h3 class="fw-normal fs-4"><i class="bi bi-menu-button-wide me-2"></i>Menu of the day</h3>
         <hr>
         <p class="mb-4 fw-light">Add or remove dishes to showcase today's offerings for guests.</p>
     </div>
-    <div class="menu-list">
+    <div class="motd-list p-3">
         {% for ct in ['Breakfast', 'Lunch', 'Snacks', 'Dinner'] %}
         <h3 class="fw-normal fs-4">{{ct}}</h3>
         <hr class="mb-3">
