feat: show orders

--- a/templates/show_orders.html
+++ b/templates/show_orders.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %} {% block body %}
 <div class="container my-5">
     <div class="p-3">
-        <h3 class="fw-normal fs-4">Orders List</h3>
+        <h3 class="fw-normal fs-4">Orders</h3>
         <hr class="mb-4">
+        <p class="mb-4 fw-light">Proceed the list of following orders.</p>
     </div>
     <table class="table table-hover">
         <thead>
             <tr class="text-center">
-                <th scope="col">Token #</th>
-                <th scope="col">Item name</th>
-                <th scope="col">Qty</th>
-                <th scope="col">Customer</th>
+                <th scope="col"># Token</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
                 <th scope="col">Priority</th>
                 <th scope="col">Time</th>
                 <!-- Delivered tick -->
@@ -18,19 +19,23 @@
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            {% for order in orders %}
+            {% for token, order in data.items() %}
             <tr class="text-center">
-                <th scope="row"># {{order[0]}}</th>
+                <th scope="row"># {{token}}</th>
                 <td>{{order[2]}}</td>
-                <td>₹ {{order[4]}}</td>
+                <td>{{order[3]}}</td>
+                <td>{{order[4]}}</td>
                 <td>
-                    {% if order[3] == 'Pending' %}
-                    <span class="badge rounded-pill text-bg-danger">{{order[3]}}</span> {% else %}
-                    <span class="badge rounded-pill text-bg-success">Delivered</span> {% endif %}
+                    {% if order[5] == 'normal' %}
+                    <span class="badge rounded-pill text-bg-warning">Low</span>
+                    {% else %}
+                    <span class="badge rounded-pill text-bg-danger">High</span>
+                    {% endif %}
                 </td>
+                <td>{{order[6]}}</td>
                 <td>
-                    <a href="/orders/{{order[0]}}" role="button" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
-                    <a role="button" class="btn btn-sm btn-danger btn-remove-order" data-id="{{order[0]}}"><i class="bi bi-trash"></i></a>
+                    <a role="button" class="btn btn-sm btn-success btn-remove-order" data-id="{{token}}"><i class="bi bi-check2"></i></a>
+                    <a href="/admin/orders/show/{{token}}" role="button" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
                 </td>
             </tr>
             {% endfor %}
