--- a/templates/admin.html
+++ b/templates/admin.html
@@ -30,7 +30,7 @@
                         {% set word = i.split(' ')[0] %}
                     {% endif %}
                     {% if i == 'Show Orders' %}
-                    <a href="/admin/orders/{{word|lower}}" class="stretched-link"></a>
+                    <a href="/admin/orders" class="stretched-link"></a>
                     {% elif i == 'Menu of the day' %}
                     <a href="/admin/manage/{{word|lower}}" class="stretched-link"></a>
                     {% else %}
