--- a/templates/show_order.html
+++ b/templates/show_order.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %} {% block body %}
 <div class="container my-5">
     <div class="p-3">
-        <h3 class="fw-normal fs-4">Orders</h3>
+        <h3 class="fw-normal fs-4">Token #{{order_id}}</h3>
         <hr class="mb-4">
         <p class="mb-4 fw-light">Proceed the list of following orders.</p>
     </div>
+    <!-- {% for i, j in data.items() %} {{j}} {% endfor %} -->
+    {{data}}
     <table class="table table-hover">
         <thead>
             <tr class="text-center">
@@ -27,10 +29,8 @@
                 <td>{{order[4]}}</td>
                 <td>
                     {% if order[5] == 'normal' %}
-                    <span class="badge rounded-pill text-bg-warning">Low</span>
-                    {% else %}
-                    <span class="badge rounded-pill text-bg-danger">High</span>
-                    {% endif %}
+                    <span class="badge rounded-pill text-bg-warning">Low</span> {% else %}
+                    <span class="badge rounded-pill text-bg-danger">High</span> {% endif %}
                 </td>
                 <td>{{order[6]}}</td>
                 <td>
