feat: send mail

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -36,7 +36,7 @@
                     </td>
                     <td>{{order[6]}}</td>
                     <td>
-                        <a role="button" class="btn btn-sm btn-success btn-remove-order" data-id="{{token}}" data-token="{{order[0]}}"><i class="bi bi-check2"></i></a>
+                        <a role="button" class="btn btn-sm btn-success btn-remove-order" data-id="{{token}}" data-token="{{order[0]}}" data-name="{{order[2]}}" data-email="{{order[3]}}"><i class="bi bi-check2"></i></a>
                         <a href="/admin/orders/show/{{token}}" role="button" class="btn btn-sm btn-primary"><i
                                     class="bi bi-eye"></i></a>
                     </td>
