feat: motd add and remove feature added

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         {% endfor %}
     </div>
     <h3 class="fw-normal fs-3">Menu of the day</h3>
-    <hr class="mb-4">
+    <hr class="mb-4"> {{motd}}
     <div></div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
         <div class="col-md-4 d-flex align-items-center">
