--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,37 @@
         {% endfor %}
     </div>
     <h3 class="fw-normal fs-3">Menu of the day</h3>
-    <hr class="mb-4"> {{motd}}
-    <div></div>
+    <hr class="mb-4">
+
+    <div>
+        {% for i, j in motd.items() %}
+        <h3 class="fw-normal fs-4">
+            {{i}}
+        </h3>
+        <hr class="mb-3"> {% if j|length == 0 %}
+        <p class="text-danger">No items added!</p>
+        {% else %}
+        <div class="row gx-3 gx-lg-4 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            {% for item in j %}
+            <div class="col mb-3 gx-4 gy-2">
+                <div class="card h-100 border shadow custom-card">
+                    <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + item.category + '/' + item.img) }}" alt="{{item.img}}">
+                    <div class="card-body px-4">
+                        <div class="text-center">
+                            <h5 class="fw-bold">{{item.name}}</h5>
+                            <p class="fw-semibold">Price: ₹{{item.price}}</p>
+                            <label class="text-start">{{item.description}}</label>
+                        </div>
+                    </div>
+                    <div class="card-footer border-0 bg-transparent px-3 pb-4">
+                        <p class="text-start mt-2">Category: <label class="fw-semibold">{{item.category|capitalize}}</label></p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %} {% endfor %}
+    </div>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-5 border-top">
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
