stretch link added to motd

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,7 @@
                             <p class="fw-semibold">Price: ₹{{item.price}}</p>
                             <label class="text-start">{{item.description}}</label>
                         </div>
+                        <a href="/category/{{i|lower}}" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
